Add tracing to consumable resources
Provide an API for consumable resources to export numeric values to
observation.